--- a/presentacion/ingMarca.html
+++ b/presentacion/ingMarca.html
@@ -8,7 +8,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Registro Personal</title>
 </head>
 <body>
         <div class="bg">
@@ -18,11 +18,10 @@
                     <div class="card card-signin my-5">
                       <div class="card-body bg-transparent" >
                         <h5 class="card-title text-center">Ingresar Marca</h5>
-                        <form class="form-signin">
+                        <form class="form-signin" method="POST" action="ingresarM.php">
                           <div class="form-label-group text-center">
                             <label for="reg">Registro</label>
-                            <input type="text" id="reg" name="reg" required autofocus>
-                            
+                            <input type="text" id="reg" name="reg" required autofocus>                            
                           </div>
                           <div class="form-check">
                             <input class="form-check-input" type="radio" name="tipo" id="tipo" value="0" checked>
